# rosu-pattern-detector

./: .gitignore  Cargo.toml  README.md
resources/mania/: test_mania_dense_cj.osu  test_mania_singlestream.osu
src/: calc.rs  lib.rs  main.rs  mania.rs  structs.rs  utils.rs
src/ctb/: mod.rs  structs.rs
src/mania/: detector.rs  mod.rs  structs.rs  transform.rs
src/mania/models/: base.rs  mod.rs  pattern.rs
src/std/: detector.rs  mod.rs  structs.rs  transform.rs
src/taiko/: structs.rs
