[package]
name = "rosu-pattern-detector"
version = "0.1.0"
edition = "2021"
authors = ["Osef0760 <osefcode@gmail.com"]

[dependencies]
rosu-map = "0.2.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
eyre = "0.6.12"
