[package]
name = "rosu-pattern-detector"
version = "0.1.1"
edition = "2021"
authors = ["Osef0760 <osefcode@gmail.com>"]
description = "Pattern detector for osu!"
license = "MIT"
repository = "https://github.com/OsuChecker/rosu-pattern-detector"
documentation = "https://docs.rs/rosu-pattern-detector"
readme = "README.md"
keywords = ["osu", "gaming", "pattern-detection", "rhythm-game"]
categories = ["games", "algorithms"]

[dependencies]
rosu-map = "0.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
eyre = "0.6.12"